--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,37 @@
 /* You can add global styles to this file, and also import other style files */
+header{
+  min-height: 74px;
+}
+header .navbar{
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  z-index: 100;
+}
+.style_slider{
+  height: calc(50vh - 74px);
+  min-height: 500px;
+}
+.object-fit{
+  object-fit: cover;
+}
+.card-img-top{
+  width: 100%;
+  height: 200px;
+  object-fit: contain;
+}
+.card-text{
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  text-align: justify;
+  -webkit-box-orient: vertical;
+}
+.card-title{
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  text-align: justify;
+  -webkit-box-orient: vertical;
+}
